--- a/viz-lib/src/visualizations/counter/render.less
+++ b/viz-lib/src/visualizations/counter/render.less
@@ -3,7 +3,6 @@
   text-align: center;
   padding: 15px 10px;
   overflow: hidden;
-  position: relative;
 
   .counter-visualization-content {
     margin: 0;
